--- a/1st-gen/tools/styles/tokens-v2/system-theme-bridge.css
+++ b/1st-gen/tools/styles/tokens-v2/system-theme-bridge.css
@@ -599,7 +599,6 @@
   --system-swatch-group-spacing-compact: var(--spectrum-spacing-50);
   --system-swatch-group-spacing-regular: var(--spectrum-spacing-75);
   --system-swatch-group-spacing-spacious: var(--spectrum-spacing-100);
-  --system-switch-border-width-themed: var(--spectrum-border-width-200);
   --system-switch-border-color-selected-default: var(--spectrum-neutral-background-color-default);
   --system-switch-border-color-selected-hover: var(--spectrum-neutral-background-color-hover);
   --system-switch-border-color-selected-down: var(--spectrum-neutral-background-color-down);
