--- a/1st-gen/tools/styles/tokens/spectrum/system-theme-bridge.css
+++ b/1st-gen/tools/styles/tokens/spectrum/system-theme-bridge.css
@@ -578,7 +578,6 @@
   --system-swatch-group-spacing-compact: var(--spectrum-spacing-50);
   --system-swatch-group-spacing-regular: var(--spectrum-spacing-75);
   --system-swatch-group-spacing-spacious: var(--spectrum-spacing-100);
-  --system-switch-border-width-themed: 0px;
   --system-switch-border-color-selected-default: transparent;
   --system-switch-border-color-selected-hover: transparent;
   --system-switch-border-color-selected-down: transparent;
